# resume-parser

./: .env.example  .gitignore  CLAUDE.md  Procfile  config.py  eval.py  main.py  nixpacks.toml  pyproject.toml  railway.json  resume-parser-architecture-build-guide.md  run_batch.py  run_single.py  schema.py
connectors/: __init__.py  base.py  local_connector.py  rclone_connector.py
extraction/: __init__.py  base.py  fallback_extractor.py  gemini_extractor.py  openai_compat_extractor.py  qwen_extractor.py
ground_truth/: sample_01_Accountant.json  sample_02_Accountant.json  sample_03_Accountant.json  sample_04_Accountant.json  sample_05_Accountant.json  sample_ca_india_synthetic.json  sample_corrupt.json  sample_garbled.json  sample_legacy.json  sample_multicolumn.json  sample_scanned.json  sample_screenshot.json
normalize/: __init__.py  dates.py  dedup.py  phones.py
output/: __init__.py  base.py  column_map.py  excel_sink.py
prompts/: extract_v1.py
routing/: __init__.py  base.py  cascade.py  doc_converter.py  escalation.py  pdf_utils.py  text_quality.py
test_corpus/: export_corpus.py
test_corpus/files/: sample_ca_india_synthetic.docx  sample_ca_india_synthetic.txt  sample_legacy.doc
tests/: conftest.py  test_phase0.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py
tests/golden/: sample_01_Accountant_expected.json  sample_02_Accountant_expected.json  sample_03_Accountant_expected.json  sample_04_Accountant_expected.json  sample_05_Accountant_expected.json  (+1 more)
validate/: __init__.py
